# agentic-survey-validator

./: .gitignore  AGENT.md  README.md  pyproject.toml  requirements.txt
configs/: model_config.yaml  rubric.yaml
deliverables/: pitch_deck.md  representative_examples.md  summary_report.json  technical_report.md
src/: config.py  main.py
src/io/: load_dataset.py  save_outputs.py
src/llm/: extraction.py  judge.py  prompts.py
src/metrics/: lexical_metrics.py
src/pipelines/: aggregate_results.py  run_consistency.py  run_extraction.py  run_pair_scoring.py
src/reporting/: examples.py
src/schemas/: outputs.py  records.py
src/utils/: logging.py
